Add floating point support to sparcv9 xptcall implementation. Bug #91840 r=pavlov [not part of the build and all that nonsense]